Implementacao do Botao Cancelar